// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Generate Engineers generates a report when no Engineers are given 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"UTF-8\\" />
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\" />
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    <title>Team Report</title>
    <link
      rel=\\"stylesheet\\"
      href=\\"https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css\\"
    />
  </head>
  <body>
    <section class=\\"hero is-warning\\">
      <div class=\\"hero-body\\">
        <p class=\\"title\\">Project 486 - Team Members</p>
        <p class=\\"subtitle\\">System Generated Report</p>
      </div>
    </section>
    <section id=\\"managers\\" class=\\"section is-small\\">
      <div class=\\"container\\">
        <h1 class=\\"title\\">Team Managers</h1>
        <h2 class=\\"subtitle\\">The Team managers for this project are:</h2>
        <div class=\\"card\\">
          <div class=\\"card-content\\">
            <div class=\\"media\\">
              <div class=\\"media-left\\">
                <figure class=\\"image is-128x128\\">
                  <img
                    src=\\"https://randomuser.me/api/portraits/men/60.jpg\\"
                    alt=\\"Placeholder image\\"
                  />
                </figure>
              </div>
              <div class=\\"media-content\\">
                <p class=\\"title is-3\\">Bazza</p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Employee ID:</strong> 245
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Email: </strong>bazz@lovesshazz.com
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Office:</strong> undefined
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
    <section id=\\"engineers\\" class=\\"section is-small\\">
      <div class=\\"container\\">
        <h1 class=\\"title\\">Engineers</h1>
        <h2 class=\\"subtitle\\">The Engineers for this project are:</h2>
      </div>
    </section>
    <section id=\\"interns\\" class=\\"section is-small\\">
      <div class=\\"container\\">
        <h1 class=\\"title\\">Interns</h1>
        <h2 class=\\"subtitle\\">The Interns on this project are:</h2>
      </div>
    </section>
  </body>
</html>
"
`;

exports[`Generate Engineers generates a report with engineers when engineers are given 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"UTF-8\\" />
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\" />
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    <title>Team Report</title>
    <link
      rel=\\"stylesheet\\"
      href=\\"https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css\\"
    />
  </head>
  <body>
    <section class=\\"hero is-warning\\">
      <div class=\\"hero-body\\">
        <p class=\\"title\\">Project 486 - Team Members</p>
        <p class=\\"subtitle\\">System Generated Report</p>
      </div>
    </section>
    <section id=\\"managers\\" class=\\"section is-small\\">
      <div class=\\"container\\">
        <h1 class=\\"title\\">Team Managers</h1>
        <h2 class=\\"subtitle\\">The Team managers for this project are:</h2>
        <div class=\\"card\\">
          <div class=\\"card-content\\">
            <div class=\\"media\\">
              <div class=\\"media-left\\">
                <figure class=\\"image is-128x128\\">
                  <img
                    src=\\"https://randomuser.me/api/portraits/men/60.jpg\\"
                    alt=\\"Placeholder image\\"
                  />
                </figure>
              </div>
              <div class=\\"media-content\\">
                <p class=\\"title is-3\\">Bazza</p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Employee ID:</strong> 245
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Email: </strong>bazz@lovesshazz.com
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Office:</strong> undefined
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
    <section id=\\"engineers\\" class=\\"section is-small\\">
      <div class=\\"container\\">
        <h1 class=\\"title\\">Engineers</h1>
        <h2 class=\\"subtitle\\">The Engineers for this project are:</h2>
        <div class=\\"card\\">
          <div class=\\"card-content\\">
            <div class=\\"media\\">
              <div class=\\"media-left\\">
                <figure class=\\"image is-128x128\\">
                  <img
                    src=\\"https://randomuser.me/api/portraits/men/60.jpg\\"
                    alt=\\"Placeholder image\\"
                  />
                </figure>
              </div>
              <div class=\\"media-content\\">
                <p class=\\"title is-3\\">John</p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Employee ID:</strong> 234
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Email: </strong>john@bigj.com
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>GitHub Account:</strong> undefined
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
    <section id=\\"interns\\" class=\\"section is-small\\">
      <div class=\\"container\\">
        <h1 class=\\"title\\">Interns</h1>
        <h2 class=\\"subtitle\\">The Interns on this project are:</h2>
      </div>
    </section>
  </body>
</html>
"
`;

exports[`Generate Managers generates a report when no managers are given 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"UTF-8\\" />
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\" />
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    <title>Team Report</title>
    <link
      rel=\\"stylesheet\\"
      href=\\"https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css\\"
    />
  </head>
  <body>
    <section class=\\"hero is-warning\\">
      <div class=\\"hero-body\\">
        <p class=\\"title\\">Project 486 - Team Members</p>
        <p class=\\"subtitle\\">System Generated Report</p>
      </div>
    </section>
    <section id=\\"managers\\" class=\\"section is-small\\">
      <div class=\\"container\\">
        <h1 class=\\"title\\">Team Managers</h1>
        <h2 class=\\"subtitle\\">The Team managers for this project are:</h2>
      </div>
    </section>
    <section id=\\"engineers\\" class=\\"section is-small\\">
      <div class=\\"container\\">
        <h1 class=\\"title\\">Engineers</h1>
        <h2 class=\\"subtitle\\">The Engineers for this project are:</h2>
        <div class=\\"card\\">
          <div class=\\"card-content\\">
            <div class=\\"media\\">
              <div class=\\"media-left\\">
                <figure class=\\"image is-128x128\\">
                  <img
                    src=\\"https://randomuser.me/api/portraits/men/60.jpg\\"
                    alt=\\"Placeholder image\\"
                  />
                </figure>
              </div>
              <div class=\\"media-content\\">
                <p class=\\"title is-3\\">John</p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Employee ID:</strong> 234
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Email: </strong>john@bigj.com
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>GitHub Account:</strong> undefined
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
    <section id=\\"interns\\" class=\\"section is-small\\">
      <div class=\\"container\\">
        <h1 class=\\"title\\">Interns</h1>
        <h2 class=\\"subtitle\\">The Interns on this project are:</h2>
      </div>
    </section>
  </body>
</html>
"
`;

exports[`Generate Managers generates a report with managers when managers are given 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"UTF-8\\" />
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\" />
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    <title>Team Report</title>
    <link
      rel=\\"stylesheet\\"
      href=\\"https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css\\"
    />
  </head>
  <body>
    <section class=\\"hero is-warning\\">
      <div class=\\"hero-body\\">
        <p class=\\"title\\">Project 486 - Team Members</p>
        <p class=\\"subtitle\\">System Generated Report</p>
      </div>
    </section>
    <section id=\\"managers\\" class=\\"section is-small\\">
      <div class=\\"container\\">
        <h1 class=\\"title\\">Team Managers</h1>
        <h2 class=\\"subtitle\\">The Team managers for this project are:</h2>
        <div class=\\"card\\">
          <div class=\\"card-content\\">
            <div class=\\"media\\">
              <div class=\\"media-left\\">
                <figure class=\\"image is-128x128\\">
                  <img
                    src=\\"https://randomuser.me/api/portraits/men/60.jpg\\"
                    alt=\\"Placeholder image\\"
                  />
                </figure>
              </div>
              <div class=\\"media-content\\">
                <p class=\\"title is-3\\">Bazza</p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Employee ID:</strong> 245
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Email: </strong>bazz@lovesshazz.com
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Office:</strong> undefined
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
    <section id=\\"engineers\\" class=\\"section is-small\\">
      <div class=\\"container\\">
        <h1 class=\\"title\\">Engineers</h1>
        <h2 class=\\"subtitle\\">The Engineers for this project are:</h2>
        <div class=\\"card\\">
          <div class=\\"card-content\\">
            <div class=\\"media\\">
              <div class=\\"media-left\\">
                <figure class=\\"image is-128x128\\">
                  <img
                    src=\\"https://randomuser.me/api/portraits/men/60.jpg\\"
                    alt=\\"Placeholder image\\"
                  />
                </figure>
              </div>
              <div class=\\"media-content\\">
                <p class=\\"title is-3\\">John</p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Employee ID:</strong> 234
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>Email: </strong>john@bigj.com
                </p>
                <p class=\\"subtitle is-6 mb-2\\">
                  <strong>GitHub Account:</strong> undefined
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
    <section id=\\"interns\\" class=\\"section is-small\\">
      <div class=\\"container\\">
        <h1 class=\\"title\\">Interns</h1>
        <h2 class=\\"subtitle\\">The Interns on this project are:</h2>
      </div>
    </section>
  </body>
</html>
"
`;

exports[`Generate Report generates an empty report when no team object given 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"UTF-8\\" />
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\" />
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    <title>Team Report</title>
    <link
      rel=\\"stylesheet\\"
      href=\\"https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css\\"
    />
  </head>
  <body>
    <section class=\\"hero is-warning\\">
      <div class=\\"hero-body\\">
        <p class=\\"title\\">Project 486 - Team Members</p>
        <p class=\\"subtitle\\">System Generated Report</p>
      </div>
    </section>
    <section id=\\"managers\\" class=\\"section is-small\\">
      <div class=\\"container\\">
        <h1 class=\\"title\\">Team Managers</h1>
        <h2 class=\\"subtitle\\">The Team managers for this project are:</h2>
      </div>
    </section>
    <section id=\\"engineers\\" class=\\"section is-small\\">
      <div class=\\"container\\">
        <h1 class=\\"title\\">Engineers</h1>
        <h2 class=\\"subtitle\\">The Engineers for this project are:</h2>
      </div>
    </section>
    <section id=\\"interns\\" class=\\"section is-small\\">
      <div class=\\"container\\">
        <h1 class=\\"title\\">Interns</h1>
        <h2 class=\\"subtitle\\">The Interns on this project are:</h2>
      </div>
    </section>
  </body>
</html>
"
`;
